<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.onboarding.OnBoarding">


    <ImageView
        android:id="@+id/onBoardingIv"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/on_boarding_iv"
        android:src="@drawable/undraw_welcome_cats_thqn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onBoardingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/on_boarding_tv"
        android:textColor="@color/on_boarding_tv"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardingIv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onBoardingStartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/on_boardingp_btn_shape"
        android:text="@string/let_s_start"
        android:textAllCaps="false"
        android:textColor="@color/border_btn"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardingTv" />
</androidx.constraintlayout.widget.ConstraintLayout>